--- a/assets/style.css
+++ b/assets/style.css
@@ -1,13 +1,12 @@
 #wrapper {
-    border: 1px solid rgb(110, 0, 110);
     position: absolute;
     top: 20%;
     left: 30%;
-    width: 500px;
-    height: 500px;
+    width: 435px;
 }
 
 #currentTime {
+    color: rgb(110, 0, 110);
     float: right;
 }
 
