Added css styling

--- a/assets/style.css
+++ b/assets/style.css
@@ -21,3 +21,74 @@
     padding: 15px, 30px;
     margin-left: 37%;
 }
+
+#goBack {
+    background-color: rgb(110, 0, 110);
+    position: relative;
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    top: 30%;
+    left: 55%;
+    width: auto;
+    text-align: center;
+    text-decoration: none;
+}
+
+#clear {
+    background-color: rgb(110, 0, 110);
+    position: relative;
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+    top: 30%;
+    right: 5%;
+    text-align: center;
+}
+
+button {
+    border-radius: 8px;
+    padding: 5px;
+    margin-top: 10px;
+}
+
+textarea {
+    width: 90%;
+    margin: 20px;
+}
+
+#Submit {
+    background-color: rgb(110, 0, 110);
+    margin-left: 33%;
+    padding: 15px 32px;
+    font-size: 20px;
+    color: white;
+}
+
+label {
+    margin-right: 10px;
+}
+input {
+    margin-bottom: 20px;
+    width: 50%;
+    border: 1px solid lightgray;
+}
+
+h1 {
+    text-align: center;
+}
+
+li {
+    background-color: rgb(110, 0, 110);
+    margin-top: 10px;
+    padding: 5px 15px;
+    width: 80%;
+    border-radius: 8px;
+    font-size: 18px;
+    color: white;
+}
+
+#createDiv {
+    margin-top: 20px;
+    border-top: 1px solid lightgray;
+}
