Matched button sizes

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,7 +17,7 @@
 #startTime {
     background-color: rgb(110, 0, 110);
     font-size: 20px;
-    padding: 15px, 30px;
+    padding: 10px;
     color: white;
 }
 
